<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Tytuł posta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tutul_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="20"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:inputType="text"
            android:text="Liczba"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liczba_text" />

        <AutoCompleteTextView
            android:id="@+id/edit_kategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:inputType="text"
            android:text="Kategorie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kategorie_text" />


        <Button
            android:id="@+id/dodaj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Dodaj"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLokalizacja" />

        <EditText
            android:id="@+id/editLokalizacja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:inputType="text"
            android:text="Lokalizacja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lokalizacja_text" />

        <TextView
            android:id="@+id/tutul_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="Wpisz tutuł (max 20 znaków) najlepiej opisujący twoje spotkanie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/kategorie_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/text_kategorie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputlayout" />

        <TextView
            android:id="@+id/liczba_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="Wpisz maksymalną ilość osób, która będzie mogła dołączyć do spotkania"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_kategoria" />

        <TextView
            android:id="@+id/krotki_opis_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/text_short_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayoutSopis"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.85"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Krótki opis"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/krotki_opis_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/short_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:lines="3"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/opis_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/opis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputlayoutSopis" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayoutopis"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Opis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/opis_text"
            app:layout_constraintWidth_percent="0.85">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:lines="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lokalizacja_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/lokalizacja_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputlayoutopis" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintStart_toEndOf="@+id/edit_kategoria"
            app:layout_constraintTop_toBottomOf="@+id/kategorie_text" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>