<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DBD3DF"
        >

        <Button
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Stwórz konto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card2"
            app:layout_constraintVertical_bias="0.51" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="imię"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dane1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/imie_id"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/surname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="nazwisko"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nazwisko_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/day"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="@string/dzie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.07"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/urodziny">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/day_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/month"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="Miesiąc"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/urodziny">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/month_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/year"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="Rok"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.93"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/urodziny">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/year_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/dane1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/bold_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/urodziny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Data urodzenia"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/surname" />

                <TextView
                    android:id="@+id/plec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="Płeć"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/month" />

                <Spinner
                    android:id="@+id/spinner_plec"
                    style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="Płeć"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plec" />

                <TextView
                    android:id="@+id/errorDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"

                    android:text="error"
                    android:textColor="#BF0101"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/month" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:ems="10"
                    android:hint="@string/email"

                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textView2" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:ems="10"
                    android:hint="@string/hasło"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/bold_text2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/errorHaslo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="error"
                    android:textColor="#BF0101"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>